--- a/angular-module/src/app/app.component.html
+++ b/angular-module/src/app/app.component.html
@@ -5,7 +5,7 @@
     <span *ngIf="user; else placeholder">
        {{user?.name}}!!
     </span>
-    <ng-template #placeholder>(Laravel Server not connected, seeing only ng app)</ng-template>
+    <ng-template #placeholder>(Laravel Server not connected, serving only ng app)</ng-template>
   </h3>
 
 
